--- a/src/style.css
+++ b/src/style.css
@@ -1208,4 +1208,9 @@ body {
   .xl\:text-start {
     text-align: start;
   }
+
+  .xl\:text-xl {
+    font-size: 1.25rem;
+    line-height: 1.75rem;
+  }
 }
